--- a/styles/styles.css
+++ b/styles/styles.css
@@ -487,7 +487,7 @@ body {
 .hotel-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 72px 0 72px;
+  margin: 0 72px 96px 72px;
   padding: 0;
   list-style-type: none;
 }
@@ -511,7 +511,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px 72px 25px 72px;
+  margin: 0 72px 25px 72px;
   padding: 0;
 }
 
@@ -533,7 +533,7 @@ body {
 .pagination-link {
   display: block;
   width: 60px;
-  height: 60px;
+  min-height: 60px;
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
