--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,8 +93,7 @@ body {
 /* МЕНЮ НАВИГАЦИИ */
 .navigation {
   display: flex;
-  width: 1200px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .navigation-logo {
@@ -150,7 +149,7 @@ body {
   display: block;
   min-width: 36px;
   min-height: 36px;
-  margin: 0 auto;
+  margin: 0;
   margin-right: 5px;
   padding: 0;
   font-size: 16px;
@@ -197,7 +196,7 @@ body {
 .advantages-main-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   font-size: 18px;
   line-height: 21px;
@@ -208,7 +207,7 @@ body {
 .advantages-sub-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   color: #000000;
   background-color: #ffffff;
@@ -245,20 +244,13 @@ body {
 }
 
 .advantages h3,
-.advantages h4 {
-  margin-bottom: 30px;
-  padding: 0 85px;
-}
-
+.advantages h4,
 .advantages-number {
-  margin: 0;
-  margin-bottom: 30px;
-  padding: 0 85px;
+  margin: 0 85px 30px 85px;
 }
 
 .advantages-description {
-  margin: 0;
-  padding: 0 85px;
+  margin: 0 85px;
 }
 
 .blue-block-image-start {
@@ -275,15 +267,13 @@ body {
 
 /* БЛОК ПОИСКА ГОСТИННИЦ */
 .hotel-search-title {
-  margin-bottom: 29px;
+  margin: 91px 0 29px 0;
 }
 
 .hotel-search {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  min-height: 417px;
 }
 
 .hotel-search-text {
@@ -296,9 +286,7 @@ body {
 .subscription {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  min-height: 411px;
   text-align: center;
 }
 
@@ -309,7 +297,7 @@ body {
 }
 
 .subscription-title {
-  margin-bottom: 29px;
+  margin: 94px 0 29px 0;
 }
 
 .subscription-description {
@@ -318,10 +306,18 @@ body {
   padding: 0;
 }
 
+.subscription-form {
+  display: flex;
+  margin-bottom: 94px;
+}
+
 .subscription-input {
+  padding: 20px 491px 19px 22px;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  border: none;
+  border-radius: 10px 0 0 10px;
   background-color: #F2F2F2;
 }
 
@@ -332,7 +328,6 @@ body {
   justify-content: space-between;
   align-items: center;
   min-height: 120px;
-  margin: 0 auto;
 }
 
 .footer-social-list {
@@ -401,7 +396,7 @@ body {
 .catalog-filter {
   display: flex;
   justify-content: space-around;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -485,25 +480,62 @@ body {
 }
 
 .hotel-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  column-gap: 18px;
   margin: 0 72px 96px 72px;
   padding: 0;
   list-style-type: none;
 }
 
-.hotel-card {
-  width: 340px;
-  margin-right: 18px;
-  padding: 0;
-}
-
-.hotel-card:nth-child(3n) {
-  margin-right: 0;
-}
-
 .hotel-card-content {
+  display: grid;
+  grid-template-columns: 140px 140px;
+  gap: 20px;
   margin: 20px 20px;
+}
+
+.hotel-card-image {
+  grid-column: 1 / 3;
+}
+
+.hotel-card-title {
+  grid-column: 1 / 3;
+  text-transform: none;
+}
+
+.hotel-card-type-price {
+  display: grid;
+  grid-template-columns: 140px 140px;
+  gap: 20px;
+  grid-column: 1 / 3;
+  margin: 0;
+}
+
+.hotel-price,
+.hotel-card-rating {
+  margin: 0;
+}
+
+.hotel-card-detail {
+  box-sizing: border-box;
+  text-align: center;
+  padding: 9px 15px 8px 15px;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.favorite {
+  padding: 9px 15px 8px 15px;
+  border: none;
+  border-radius: 4px;
+}
+
+.hotel-card-rating {
+  padding: 9px 22px 8px 22px ;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
 }
 
 /* ПАГИНАЦИЯ */
@@ -531,7 +563,9 @@ body {
 }
 
 .pagination-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 60px;
   min-height: 60px;
   font-size: 20px;
@@ -551,6 +585,7 @@ body {
 
 /* КНОПКИ */
 .button {
+  font-family:  "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
@@ -573,8 +608,11 @@ body {
 }
 
 .subscribe {
+  padding: 12px 15px;
   font-size: 20px;
   line-height: 36px;
+  border: none;
+  border-radius: 0 10px 10px 0;
 }
 
 .button-view {
@@ -589,16 +627,12 @@ body {
 
 /* КНОПКИ-ССЫЛКИ */
 .button-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
   color: #ffffff;
   background-color: #756157;
+  border-radius: 4px;
 }
 
 .here {
@@ -611,14 +645,13 @@ body {
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  border-radius: 4px;
 }
 
 .search {
   display: block;
   width: 544px;
+  margin-bottom: 93px;
   padding: 12px 15px;
-  margin: 0;
   font-size: 20px;
   line-height: 36px;
 }
@@ -631,4 +664,11 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: #333333;
+}
+
+.hotel-sorting-select {
+  box-sizing: border-box;
+  padding: 11px 73px 11px 20px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
 }
