--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,6 @@ body {
 }
 
 /* СТРАНИЦЫ */
-
 .page-header,
 .main-container,
 .page-footer {
@@ -62,7 +61,6 @@ body {
 }
 
 /* ЗАГАЛОВКИ */
-
 .heading-small {
   margin: 0;
   padding: 0;
@@ -97,10 +95,16 @@ body {
 }
 
 .navigation-logo {
+  position: absolute;
+  width: 139px;
+  margin-left: 70px;
+  margin-bottom: -5px;
+}
+
+.navigation-logo img {
   display: block;
   max-width: 100%;
-  margin-left: 70px;
-  margin-right: 30px;
+  height: auto;
 }
 
 .navigation-list {
@@ -109,6 +113,7 @@ body {
   align-items: center;
   width: 450px;
   margin: 0;
+  margin-left: 239px;
   padding: 0;
   list-style-type: none;
 }
@@ -133,7 +138,6 @@ body {
 }
 
 /* МЕНЮ ПОЛЬЗОВАТЕЛЯ */
-
 .user-list {
   display: flex;
   flex-wrap: wrap;
@@ -172,11 +176,15 @@ body {
 .promo-image-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   min-height: 485px;
   margin-bottom: 63px;
   background: #82B3D3 url("../images/background-promo.jpeg") no-repeat;
   background-size: 100% auto;
+}
+
+.promo-image {
+  margin-bottom: 83px;
 }
 
 .promo-text {
@@ -266,14 +274,14 @@ body {
 }
 
 /* БЛОК ПОИСКА ГОСТИННИЦ */
-.hotel-search-title {
-  margin: 91px 0 29px 0;
-}
-
 .hotel-search {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.hotel-search-title {
+  margin: 91px 0 29px 0;
 }
 
 .hotel-search-text {
@@ -313,16 +321,16 @@ body {
 
 .subscription-input {
   padding: 20px 491px 19px 22px;
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  background-color: #F2F2F2;
   border: none;
   border-radius: 10px 0 0 10px;
-  background-color: #F2F2F2;
 }
 
 /* ПОДВАЛ */
-
 .page-footer {
   display: flex;
   justify-content: space-between;
@@ -373,8 +381,26 @@ body {
 }
 
 /* ХЛЕБНЫЕ КРОШКИ */
+.main-inner-header {
+  margin: 30px 70px 40px 70px;
+}
+
+.main-inner-title {
+  margin-bottom: 10px;
+}
+
+.house-link {
+  display: block;
+  min-width: 20px;
+  min-height: 20px;
+  margin-right: 5px;
+  padding: 0;
+  outline: #000000 1px solid;
+}
+
 .breadcrumps {
   display: flex;
+  align-items: center;
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -395,7 +421,7 @@ body {
 
 .catalog-filter {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
 }
@@ -404,13 +430,22 @@ body {
   border: none;
 }
 
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .catalog-filter-title {
+  padding: 0;
+  margin-bottom: 30px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
 }
 
-.hotel-filter-sorting {
+.hotel-filter {
+  margin: 0 70px 70px 70px;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
@@ -421,27 +456,66 @@ body {
   display: flex;
 }
 
-.group-buttons {
-  display: flex;
-  flex-direction: column;
-}
-
 .group-infrastructure {
-  width: 160px;
+  padding: 0;
+  margin: 0;
   margin-right: 70px;
 }
 
 .group-type-house {
-  width: 180px;
+  padding: 0;
+  margin: 0;
+}
+
+.control-input {
+  margin: 0 19px 15px 0;
 }
 
 .group-price {
-  width: 300px;
+  padding: 0;
+  margin: 0;
   margin-right: 70px;
 }
 
+.input-price {
+  width: 143px;
+  height: 48px;
+  font-family: "PT Sans", sans-serif;
+  background-color: transparent;
+  border: 2px solid #FFFFFF;
+}
+
+.price-to {
+  border-radius: 0 4px 4px 0;
+}
+
+.price-from {
+  border-right: none;
+  border-radius: 4px 0 0 4px;
+}
+
+.price-form {
+  display: flex;
+}
+
 .group-buttons {
-  width: 170px;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+
+.submit {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  padding: 14px 35px;
+  border: none;
+  border-radius: 4px;
+}
+
+.reset {
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
 }
 
 /* СОРТИРОВКА КАТАЛОГА ГОСТИНИЦ */
@@ -474,11 +548,6 @@ body {
 }
 
 /* КАТАЛОГ ГОСТИНИЦ */
-.hotel-card-rating {
-  background-color: #F2F2F2;
-  text-align: center;
-}
-
 .hotel-list {
   display: grid;
   grid-template-columns: repeat(3, 340px);
@@ -510,10 +579,12 @@ body {
   gap: 20px;
   grid-column: 1 / 3;
   margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
 }
 
-.hotel-price,
-.hotel-card-rating {
+.hotel-price {
   margin: 0;
 }
 
@@ -532,10 +603,14 @@ body {
 }
 
 .hotel-card-rating {
+  margin: 0;
   padding: 9px 22px 8px 22px ;
   font-size: 16px;
   line-height: 20px;
+  text-align: center;
   text-transform: uppercase;
+  background-color: #F2F2F2;
+  border-radius: 4px;
 }
 
 /* ПАГИНАЦИЯ */
@@ -575,17 +650,19 @@ body {
   color: #ffffff;
 }
 
-.label-amount {
-  margin-right: 51px;
-}
-
 .current-catalog-page {
   background-color: #F2F2F2;
 }
 
+.label-amount {
+  margin-right: 51px;
+  width: 160px;
+  height: 49px;
+}
+
 /* КНОПКИ */
 .button {
-  font-family:  "PT Sans", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
@@ -637,8 +714,8 @@ body {
 
 .here {
   display: block;
-  width: 160px;
   box-sizing: border-box;
+  width: 160px;
   padding: 9px 15px 8px 15px;
   margin: 0;
   margin-right: 70px;
@@ -657,18 +734,32 @@ body {
 }
 
 /* СЕЛЕКТЫ */
-.label-amount,
-.select-control-amount,
-.hotel-sorting-select {
+.select-control {
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
-  color: #333333;
 }
 
-.hotel-sorting-select {
+.label-amount-cards {
+  margin-right: 51px;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
+.sort-by-price {
   box-sizing: border-box;
-  padding: 11px 73px 11px 20px;
+  width: 290px;
+  height: 49px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.amount-cards {
+  box-sizing: border-box;
+  width: 160px;
+  height: 49px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
