--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,20 +258,44 @@ body {
   list-style-type: none;
 }
 
-.advantages-sub-item:nth-child(1) {
-  background-image: url("../images/icon/icon-housing.svg");
+.advantage-container-big {
+  width: 230px;
+  min-height: 200px;
+  margin: 92px 85px;
+}
+
+.advantage-container-sub {
+  width: 230px;
+  min-height: 223px;
+  margin: 80px 85px;
+}
+
+.advantage-container {
+  width: 230px;
+  min-height: 179px;
+  margin: 102px 85px;
+}
+
+.advantage-container-sub .heading-small {
+  padding-top: 102px;
+}
+
+.icon-housing {
+  background-image: url('../images/icon/icon-housing.svg');
   background-repeat: no-repeat;
   background-position: top;
 }
 
+.icon-food {
+  background-image: url('../images/icon/icon-food.svg');
+  background-repeat: no-repeat;
+  background-position: top;
+}
 
-.advantages-main-item,
-.advantages-sub-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 400px;
-  min-height: 384px;
+.icon-souvenirs {
+  background-image: url('../images/icon/icon-souvenirs.svg');
+  background-repeat: no-repeat;
+  background-position: top;
 }
 
 .blue-block {
@@ -287,20 +311,6 @@ body {
 .advantages-text {
   margin: 0;
   margin-bottom: 90px;
-  padding: 0;
-}
-
-.blue-block-text {
-  align-self: center;
-}
-
-.advantages .heading-small,
-.advantages-number {
-  margin: 0 85px 30px 85px;
-}
-
-.advantages-description {
-  margin: 0 85px;
 }
 
 .blue-block-image-start {
@@ -383,7 +393,7 @@ body {
 .footer-social-list {
   display: flex;
   flex-wrap: wrap;
-  width: 220px;
+  width: 150px;
   margin: 45px 0 35px 70px;
   padding: 0;
   list-style-type: none;
@@ -391,13 +401,27 @@ body {
 
 .footer-social-link {
   display: block;
-  min-width: 36px;
-  min-height: 36px;
-  margin-right: 5px;
-  padding: 0;
-  outline: #000000 1px solid;
+  min-width: 47px;
+  min-height: 40px;
 }
 
+.footer-social-item:nth-child(1) {
+  background-image: url('../images/social/social-vkontakte.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-social-item:nth-child(2) {
+  background-image: url('../images/social/social-telegram.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-social-item:nth-child(3) {
+  background-image: url('../images/social/social-youtube.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .footer-phone {
   margin: 45px 0 35px 0;
 }
@@ -414,10 +438,10 @@ body {
 }
 
 .footer-htmlacademy-logo {
-  margin: 45px 70px 35px 0;
+  margin: 49px 70px 38px 0;
 }
 
-.htmlacademy-logo {
+.htmlacademy-logo img {
   display: block;
   width: 100%;
 }
@@ -431,22 +455,44 @@ body {
   margin-bottom: 10px;
 }
 
-.house-link {
-  display: block;
-  min-width: 20px;
-  min-height: 20px;
-  margin-right: 5px;
-  padding: 0;
-  outline: #000000 1px solid;
-}
-
-.breadcrumps {
+.breadcrumps-list {
   display: flex;
   align-items: center;
   margin: 0;
   padding: 0;
   font-size: 16px;
+  line-height: 21px;
   list-style-type: none;
+}
+
+.house-link {
+  display: block;
+  width: 14px;
+  min-height: 21px;
+  background-image: url('../images/icon/icon-breadcrump-house.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.breadcrumps-item {
+  margin-right: 25px;
+}
+
+.breadcrumps-item:not(:last-child) {
+  position: relative;
+}
+
+.breadcrumps-item:not(:last-child)::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 6px;
+  right: -18px;
+  width: 8px;
+  height: 8px;
+  background-image: url('../images/icon/icon-breadcrump-arrow.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* ФИЛЬТРАЦИЯ КАТАЛОГА ГОСТИНИЦ */
