--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,18 +160,15 @@ body {
   min-height: 66px;
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  line-height: 20px;
-  color: #ffffff;
 }
 
-.user-item:nth-child(1) {
+.user-item:nth-child(1) .user-link {
   background-image: url('../images/icon/icon-search.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.user-item:nth-child(2) {
+.user-item:nth-child(2) .user-link {
   position: relative;
   background-image: url('../images/icon/icon-favorite.svg');
   background-repeat: no-repeat;
@@ -179,7 +176,7 @@ body {
   margin-right: 20px;
 }
 
-.user-item:nth-child(2)::before {
+.user-item:nth-child(2) .user-link::before {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -685,13 +682,19 @@ body {
   margin: 20px 20px;
 }
 
-.hotel-card-image {
+.hotel-catalog-link {
   grid-column: 1 / 3;
+  text-decoration: none;
+}
+
+.hotel-card-image {
+  display: block;
 }
 
 .hotel-card-title {
-  grid-column: 1 / 3;
+  margin-top: 16px;
   text-transform: none;
+  color: #000000;
 }
 
 .hotel-card-type-price {
