--- a/styles/styles.css
+++ b/styles/styles.css
@@ -465,6 +465,392 @@ page-container {
   fill: rgba(117, 97, 87, 0.3);
 }
 
+/* МОДАЛЬНОЕ ОКНО */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+/* .modal-container-close {
+  display: none;
+} */
+
+.modal {
+  position: relative;
+  width: 575px;
+  margin: auto;
+  padding: 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+}
+
+.modal-close {
+  position: absolute;
+  padding: 0;
+  top: 54px;
+  right: 70px;
+  width: 53px;
+  height: 53px;
+  cursor: pointer;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 50%;
+  background-image: url('../images/icon/icon-close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-close:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close:focus {
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+}
+
+.modal-close:active {
+  background-color: #E6E6E6;
+}
+
+.modal-form {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: capitalize;
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 63px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.date-from-wrapper,
+.date-to-wrapper {
+  position: relative;
+  display: grid;
+  grid-template-columns: 119px 420px;
+  column-gap: 36px;
+}
+
+.comment-wrapper {
+  display: grid;
+  grid-template-columns: 119px 420px;
+  column-gap: 36px;
+  min-height: 29px;
+  margin-bottom: 11px;
+}
+
+.modal-amount-wrapper {
+  display: grid;
+  grid-template-columns: 288px 230px;
+  column-gap: 56px;
+  min-height: 50px;
+  margin-bottom: 29px;
+}
+
+.child-label-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.adult-amount-wrapper {
+  display: grid;
+  grid-template-columns: 119px 133px;
+  column-gap: 36px;
+  min-height: 50px;
+}
+
+.child-amount-wrapper {
+  display: grid;
+  grid-template-columns: 79px 133px;
+  column-gap: 18px;
+  min-height: 50px;
+}
+
+.adult-amount {
+  display: grid;
+  grid-template-columns: 119px 133px;
+  column-gap: 36px;
+}
+
+.child-amount {
+  display: grid;
+  grid-template-columns: 79px 133px;
+  column-gap: 18px;
+}
+
+.label-date-from,
+.label-date-to {
+  display: flex;
+  align-items: center;
+}
+
+.label-date-from::before,
+.label-date-to::before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 19px;
+  display: block;
+  width: 17px;
+  height: 15px;
+  content: "";
+  background-image: url('../images/icon/icon-calendar.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.input-date-from,
+.input-date-to {
+  width: 401px;
+  min-height: 50px;
+  padding: 0;
+  padding-left: 19px;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 4px;
+}
+
+.date-from-comment,
+.date-to-comment {
+  grid-column: 2 / 3;
+  display: flex;
+  align-items: flex-end;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  text-transform: none;
+  color: #333333;
+}
+
+.date-from-comment {
+  color: #FF5757;
+}
+
+.label-adult-amount,
+.label-child-amount {
+  display: flex;
+  align-items: center;
+}
+
+.adult-input-wrapper,
+.child-input-wrapper {
+  position: relative;
+}
+
+.input-adult-amount,
+.input-child-amount {
+  width: 133px;
+  height: 100%;
+  padding: 0;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+  text-align: center;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px;
+}
+
+.input-date-from::placeholder,
+.input-date-to::placeholder,
+.input-adult-amount::placeholder,
+.input-child-amount::placeholder {
+  color: #000000;
+  opacity: 0.6;
+}
+
+/* УБИРАЕТ ИКОНКИ В ИНПУТЕ ПРИ ТИПЕ - ДАТА
+.input-date-from::-webkit-calendar-picker-indicator,
+.input-date-to::-webkit-calendar-picker-indicator {
+  opacity: 0;
+} */
+
+.input-adult-amount::-webkit-outer-spin-button,
+.input-adult-amount::-webkit-inner-spin-button,
+.input-child-amount::-webkit-outer-spin-button,
+.input-child-amount::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.input-date-from:hover,
+.input-date-to:hover,
+.input-adult-amount:hover,
+.input-child-amount:hover {
+  background-color: #E6E6E6;
+}
+
+.input-date-from:focus,
+.input-date-to:focus,
+.input-adult-amount:focus,
+.input-child-amount:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.input-date-from:active,
+.input-date-to:active,
+.input-adult-amount:active,
+.input-child-amount:active {
+  background-color: #FFFFFF;
+  outline: 2px solid #000000;
+}
+
+.button-amount {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  width: 51px;
+  min-height: 50px;
+  padding: 0 19px;
+  cursor: pointer;
+  color: #000000;
+  opacity: 0.3;
+  background-color: inherit;
+  border: none;
+}
+
+.amount-less {
+  left: 0;
+}
+
+.amount-more {
+  right: 0;
+}
+
+.amount-less:hover,
+.amount-more:hover {
+  color: #000000;
+  opacity: 1;
+}
+
+.amount-less:focus,
+.amount-more:focus {
+  color: #000000;
+  opacity: 1;
+  outline: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.amount-less:active,
+.amount-more:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
+.modal-button {
+  width: 575px;
+  min-height: 60px;
+  padding: 0;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #83B3D3;
+  border: none;
+  border-radius: 10px;
+}
+
+.modal-button:hover {
+  background-color: #68A2CA;
+}
+
+.modal-button:focus {
+  background-color: #68A2CA;
+  border: 3px solid #756257;
+  border-radius: 10px;
+}
+
+.modal-button:active {
+  background-color: #68A2CA;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/* ТУЛТИП */
+.tooltip {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.tooltip-toggle {
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  background-color: #83B3D3;
+  background-image: url('../images/icon/icon-info.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.tooltip-text {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: none;
+  width: 216px;
+  margin-top: 4px;
+  padding: 15px 18px 18px 22px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: none;
+  background-color: #333333;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+.tooltip-text::after {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  width: 19px;
+  height: 9px;
+  margin-left: auto;
+  margin-right: auto;
+  content: "";
+  background-image: url('../images/tooltip-arrow.svg');
+}
+
+.tooltip-toggle:hover {
+  background-color: #68A2CA;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
 /* ХЛЕБНЫЕ КРОШКИ */
 .main-inner-header {
   margin: 30px 70px 40px 70px;
